# python-ruote-amqp

./: setup.cfg  setup.py
RuoteAMQP/: __init__.py  launcher.py  participant.py  workitem.py
debian/: changelog
examples/: client.py
rpm/: python-ruote-amqp.spec  python3-ruote-amqp.spec  ruote-amqp-pyclient.spec
