# see https://packaging.python.org/guides/distributing-packages-using-setuptools/
[metadata]
name = ruote-amqp
version = 3.0.0
description = Python Ruote/AMQP client
url = https://github.com/meegointegration/python-ruote-amqp
author = David Greaves
author_email = david.greaves@jolla.com
license = GPLv2
classifiers =
    Development Status :: 5 - Production
    License :: OSI Approved :: GPLv2 License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
project_urls =
    Documentation = https://
    Source = https://
    Tracker = https://

[options]
packages = find:
include_package_data = True
install_requires =
    pika
python_requires = >=3.6

[aliases]
test=pytest

[options.extras_require]
test =
    pytest >= 6.2.2
    #    pycodestyle
    #	 pytest-cov
    flake8
    pylint
    isort
    mypy
all =
    %(test)s
